--- a/cpp_programe/helloworld/.vscode/launch.json
+++ b/cpp_programe/helloworld/.vscode/launch.json
@@ -1,13 +1,13 @@
 {
     "configurations": [
         {
-            "name": "C/C++: g++.exe 生成和调试活动文件",
+            "name": "opencv debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}\\${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "C:/Users/e0006493/Documents/tools/mingw64/bin",
+            "cwd":"C:/Users/e0006493/Documents/tools/mingw64/bin",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -24,7 +24,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++.exe 生成活动文件"
+            "preLaunchTask": "opencv compile task"
         }
     ],
     "version": "2.0.0"
